# python-sandbox

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/streamlit_app/: __main__.py  home.py
src/streamlit_app/pages/: pdf_tools.py
